--- a/arch/arm/configs/slim_d801_defconfig
+++ b/arch/arm/configs/slim_d801_defconfig
@@ -732,3 +732,7 @@ CONFIG_AOSP=y
 CONFIG_EXFAT_FS=m
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_BRICKED_THERMAL=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=2265600
+CONFIG_MSM_CPU_FREQ_MIN=300000
