--- a/arch/arm/configs/slim_vs980_defconfig
+++ b/arch/arm/configs/slim_vs980_defconfig
@@ -684,3 +684,6 @@ CONFIG_MSM_RDBG=m
 # CONFIG_MEDIA_TUNER_TDA18212 is not set
 
 CONFIG_AOSP=y
+CONFIG_EXFAT_FS=m
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
