--- a/arch/arm/configs/slim_d801_defconfig
+++ b/arch/arm/configs/slim_d801_defconfig
@@ -33,8 +33,8 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
-CONFIG_IOSCHED_TEST=y
-CONFIG_DEFAULT_ROW=y
+# CONFIG_IOSCHED_TEST is not set
+CONFIG_DEFAULT_DEADLINE=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8974=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
@@ -738,3 +738,5 @@ CONFIG_BRICKED_THERMAL=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=2265600
 CONFIG_MSM_CPU_FREQ_MIN=300000
+
+CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
