Slim rebase // bringup
Change-Id: I402dc42c4d6682dfced3461c85b9d39ee8d4ebcd

--- a/arch/arm/configs/slim_vs980_defconfig
+++ b/arch/arm/configs/slim_vs980_defconfig
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-CM"
+CONFIG_LOCALVERSION="-Slim-4.4.4-KK"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -378,9 +378,9 @@ CONFIG_MACH_LGE=y
 # CONFIG_MACH_MSM8974_G2_ATT is not set
 # CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
-# CONFIG_MACH_MSM8974_G2_VZW is not set
+CONFIG_MACH_MSM8974_G2_VZW=y
 # CONFIG_MACH_MSM8974_G2_SPR is not set
-CONFIG_MACH_MSM8974_G2_TMO_US=y
+# CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
 # CONFIG_MACH_MSM8974_G2_KDDI is not set
 # CONFIG_MACH_MSM8974_G2_OPEN_COM is not set
@@ -410,7 +410,7 @@ CONFIG_MACH_MSM8974_G2_TMO_US=y
 #
 # LGE Specific Patches
 #
-CONFIG_DTS_TARGET="msm8974-g2-tmo_us"
+CONFIG_DTS_TARGET="msm8974-g2-vzw"
 CONFIG_LGE_USES_SMD_DS_TTY=y
 CONFIG_LGE_BOOTLOADER_LOG=y
 CONFIG_LGE_HANDLE_PANIC=y
@@ -1985,16 +1985,17 @@ CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_BMS=y
 CONFIG_LGE_PM=y
 CONFIG_LGE_CHARGER_TEMP_SCENARIO=y
-# CONFIG_LGE_WLC_CHARGER_TEMP_SCENARIO is not set
+CONFIG_LGE_WLC_CHARGER_TEMP_SCENARIO=y
 # CONFIG_SMB349_VZW_FAST_CHG is not set
-# CONFIG_WIRELESS_CHARGER is not set
+CONFIG_WIRELESS_CHARGER=y
+CONFIG_BQ51051B_CHARGER=y
+# CONFIG_BQ51053B_CHARGER is not set
 # CONFIG_FTT_CHARGER_V3 is not set
 CONFIG_MAX17048_FUELGAUGE=y
 # CONFIG_MAX17050_FUELGAUGE is not set
 # CONFIG_LGE_PM_BATTERY_ID_CHECKER is not set
-# CONFIG_LGE_CURRENTNOW is not set
+CONFIG_LGE_CURRENTNOW=y
 # CONFIG_BQ24192_CHARGER is not set
-CONFIG_LGE_G2_EMBEDDED_BATT=y
 # CONFIG_VZW_LLK is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
@@ -2670,8 +2671,8 @@ CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
 CONFIG_SND_SOC_APQ8074=y
 # CONFIG_SND_FM_RADIO is not set
-CONFIG_SND_VOICE_VOLUME=6
-CONFIG_SND_VOIP_VOLUME=6
+CONFIG_SND_VOICE_VOLUME=9
+CONFIG_SND_VOIP_VOLUME=9
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9320=y
@@ -2782,7 +2783,7 @@ CONFIG_USB_SUSPEND=y
 CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_DEBUG is not set
 CONFIG_USB_LGE_USB3_REDRIVER=y
-# CONFIG_USB_LGE_RELIABILITY is not set
+CONFIG_USB_LGE_RELIABILITY=y
 CONFIG_USB_LGE_LPM_STATE=y
 # CONFIG_USB_DWC3_MSM_VZW_SUPPORT is not set
 # CONFIG_USB_MON is not set
@@ -2928,14 +2929,14 @@ CONFIG_RMNET_SMD_CTL_CHANNEL=""
 CONFIG_RMNET_SMD_DATA_CHANNEL=""
 CONFIG_USB_G_LGE_ANDROID=y
 CONFIG_USB_G_LGE_ANDROID_PFSC=y
-CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="Android Platform"
+CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="VS980"
 CONFIG_USB_G_LGE_ANDROID_AUTORUN=y
 # CONFIG_USB_G_LGE_ANDROID_AUTORUN_VZW is not set
 CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
 # CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
 CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
 CONFIG_USB_G_LGE_ANDROID_NCM=y
-CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
+# CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT is not set
 # CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
 CONFIG_USB_LGE_REPOSITION_FACTORY_BIND=y
 
