--- a/arch/arm/configs/slim_d800_defconfig
+++ b/arch/arm/configs/slim_d800_defconfig
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-CM"
+CONFIG_LOCALVERSION="-Slim-4.4.4-KK"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -375,10 +375,10 @@ CONFIG_MACH_LGE=y
 # CONFIG_MACH_MSM8974_G2EVB is not set
 # CONFIG_MACH_MSM8974_G2_KR is not set
 # CONFIG_MACH_MSM8974_G2_LGU is not set
-# CONFIG_MACH_MSM8974_G2_ATT is not set
+CONFIG_MACH_MSM8974_G2_ATT=y
 # CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
-CONFIG_MACH_MSM8974_G2_VZW=y
+# CONFIG_MACH_MSM8974_G2_VZW is not set
 # CONFIG_MACH_MSM8974_G2_SPR is not set
 # CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
@@ -410,7 +410,7 @@ CONFIG_MACH_MSM8974_G2_VZW=y
 #
 # LGE Specific Patches
 #
-CONFIG_DTS_TARGET="msm8974-g2-vzw"
+CONFIG_DTS_TARGET="msm8974-g2-att"
 CONFIG_LGE_USES_SMD_DS_TTY=y
 CONFIG_LGE_BOOTLOADER_LOG=y
 CONFIG_LGE_HANDLE_PANIC=y
@@ -1282,7 +1282,8 @@ CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE=""
+CONFIG_EXTRA_FIRMWARE="audience-es325-fw.aud"
+CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1585,6 +1586,7 @@ CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 # CONFIG_DHD_USE_SCHED_SCAN is not set
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_BCM4335BT=y
+# CONFIG_BRCM_WAPI is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
@@ -1985,17 +1987,16 @@ CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_BMS=y
 CONFIG_LGE_PM=y
 CONFIG_LGE_CHARGER_TEMP_SCENARIO=y
-CONFIG_LGE_WLC_CHARGER_TEMP_SCENARIO=y
+# CONFIG_LGE_WLC_CHARGER_TEMP_SCENARIO is not set
 # CONFIG_SMB349_VZW_FAST_CHG is not set
-CONFIG_WIRELESS_CHARGER=y
-CONFIG_BQ51051B_CHARGER=y
-# CONFIG_BQ51053B_CHARGER is not set
+# CONFIG_WIRELESS_CHARGER is not set
 # CONFIG_FTT_CHARGER_V3 is not set
 CONFIG_MAX17048_FUELGAUGE=y
 # CONFIG_MAX17050_FUELGAUGE is not set
 # CONFIG_LGE_PM_BATTERY_ID_CHECKER is not set
-CONFIG_LGE_CURRENTNOW=y
+# CONFIG_LGE_CURRENTNOW is not set
 # CONFIG_BQ24192_CHARGER is not set
+# CONFIG_LGE_G2_EMBEDDED_BATT is not set
 # CONFIG_VZW_LLK is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
@@ -2438,7 +2439,8 @@ CONFIG_RADIO_ADAPTERS=y
 # Texas Instruments WL128x FM driver (ST based)
 #
 # CONFIG_RADIO_WL128X is not set
-# CONFIG_RADIO_IRIS is not set
+CONFIG_RADIO_IRIS=y
+CONFIG_RADIO_IRIS_TRANSPORT=m
 
 #
 # Graphics support
@@ -2671,14 +2673,14 @@ CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
 CONFIG_SND_SOC_APQ8074=y
 # CONFIG_SND_FM_RADIO is not set
-CONFIG_SND_VOICE_VOLUME=9
-CONFIG_SND_VOIP_VOLUME=9
+CONFIG_SND_VOICE_VOLUME=6
+CONFIG_SND_VOIP_VOLUME=6
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9320=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
-# CONFIG_SND_SOC_ES325_SLIM is not set
+CONFIG_SND_SOC_ES325_SLIM=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2783,7 +2785,7 @@ CONFIG_USB_SUSPEND=y
 CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_DEBUG is not set
 CONFIG_USB_LGE_USB3_REDRIVER=y
-CONFIG_USB_LGE_RELIABILITY=y
+# CONFIG_USB_LGE_RELIABILITY is not set
 CONFIG_USB_LGE_LPM_STATE=y
 # CONFIG_USB_DWC3_MSM_VZW_SUPPORT is not set
 # CONFIG_USB_MON is not set
@@ -2929,14 +2931,14 @@ CONFIG_RMNET_SMD_CTL_CHANNEL=""
 CONFIG_RMNET_SMD_DATA_CHANNEL=""
 CONFIG_USB_G_LGE_ANDROID=y
 CONFIG_USB_G_LGE_ANDROID_PFSC=y
-CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="VS980"
+CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="Android Platform"
 CONFIG_USB_G_LGE_ANDROID_AUTORUN=y
 # CONFIG_USB_G_LGE_ANDROID_AUTORUN_VZW is not set
 CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
 # CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
 CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
 CONFIG_USB_G_LGE_ANDROID_NCM=y
-# CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT is not set
+CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
 # CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
 CONFIG_USB_LGE_REPOSITION_FACTORY_BIND=y
 
