--- a/arch/arm/configs/slim_d802_defconfig
+++ b/arch/arm/configs/slim_d802_defconfig
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-CM"
+CONFIG_LOCALVERSION="-Slim-4.4.4-KK"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -375,7 +375,7 @@ CONFIG_MACH_LGE=y
 # CONFIG_MACH_MSM8974_G2EVB is not set
 # CONFIG_MACH_MSM8974_G2_KR is not set
 # CONFIG_MACH_MSM8974_G2_LGU is not set
-CONFIG_MACH_MSM8974_G2_ATT=y
+# CONFIG_MACH_MSM8974_G2_ATT is not set
 # CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
 # CONFIG_MACH_MSM8974_G2_VZW is not set
@@ -383,7 +383,7 @@ CONFIG_MACH_MSM8974_G2_ATT=y
 # CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
 # CONFIG_MACH_MSM8974_G2_KDDI is not set
-# CONFIG_MACH_MSM8974_G2_OPEN_COM is not set
+CONFIG_MACH_MSM8974_G2_OPEN_COM=y
 # CONFIG_MACH_MSM8974_G2_OPT_AU is not set
 # CONFIG_MACH_MSM8974_G2_TEL_AU is not set
 # CONFIG_MACH_MSM8974_G2_CA is not set
@@ -410,7 +410,7 @@ CONFIG_MACH_MSM8974_G2_ATT=y
 #
 # LGE Specific Patches
 #
-CONFIG_DTS_TARGET="msm8974-g2-att"
+CONFIG_DTS_TARGET="msm8974-g2-open_com"
 CONFIG_LGE_USES_SMD_DS_TTY=y
 CONFIG_LGE_BOOTLOADER_LOG=y
 CONFIG_LGE_HANDLE_PANIC=y
@@ -1282,8 +1282,7 @@ CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE="audience-es325-fw.aud"
-CONFIG_EXTRA_FIRMWARE_DIR="firmware"
+CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1586,7 +1585,6 @@ CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 # CONFIG_DHD_USE_SCHED_SCAN is not set
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_BCM4335BT=y
-# CONFIG_BRCM_WAPI is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
@@ -1996,7 +1994,7 @@ CONFIG_MAX17048_FUELGAUGE=y
 # CONFIG_LGE_PM_BATTERY_ID_CHECKER is not set
 # CONFIG_LGE_CURRENTNOW is not set
 # CONFIG_BQ24192_CHARGER is not set
-# CONFIG_LGE_G2_EMBEDDED_BATT is not set
+CONFIG_LGE_G2_EMBEDDED_BATT=y
 # CONFIG_VZW_LLK is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
@@ -2439,8 +2437,7 @@ CONFIG_RADIO_ADAPTERS=y
 # Texas Instruments WL128x FM driver (ST based)
 #
 # CONFIG_RADIO_WL128X is not set
-CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
+# CONFIG_RADIO_IRIS is not set
 
 #
 # Graphics support
@@ -2672,7 +2669,7 @@ CONFIG_AUDIO_OCMEM=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
 CONFIG_SND_SOC_APQ8074=y
-# CONFIG_SND_FM_RADIO is not set
+CONFIG_SND_FM_RADIO=y
 CONFIG_SND_VOICE_VOLUME=6
 CONFIG_SND_VOIP_VOLUME=6
 CONFIG_SND_SOC_I2C_AND_SPI=y
@@ -2680,7 +2677,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_SOC_WCD9320=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
-CONFIG_SND_SOC_ES325_SLIM=y
+# CONFIG_SND_SOC_ES325_SLIM is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
