--- a/arch/arm/configs/slim_d803_defconfig
+++ b/arch/arm/configs/slim_d803_defconfig
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-CM"
+CONFIG_LOCALVERSION="-Slim-4.4.4-KK"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -379,15 +379,15 @@ CONFIG_MACH_LGE=y
 # CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
 # CONFIG_MACH_MSM8974_G2_VZW is not set
-CONFIG_MACH_MSM8974_G2_SPR=y
+# CONFIG_MACH_MSM8974_G2_SPR is not set
 # CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
 # CONFIG_MACH_MSM8974_G2_KDDI is not set
 # CONFIG_MACH_MSM8974_G2_OPEN_COM is not set
 # CONFIG_MACH_MSM8974_G2_OPT_AU is not set
 # CONFIG_MACH_MSM8974_G2_TEL_AU is not set
-# CONFIG_MACH_MSM8974_G2_CA is not set
-# CONFIG_MACH_MSM8974_G2_BELL is not set
+CONFIG_MACH_MSM8974_G2_CA=y
+CONFIG_MACH_MSM8974_G2_BELL=y
 # CONFIG_MACH_MSM8974_G2_TLS is not set
 # CONFIG_MACH_MSM8974_G2_RGS is not set
 # CONFIG_MACH_MSM8974_G2_VTR is not set
@@ -410,7 +410,7 @@ CONFIG_MACH_MSM8974_G2_SPR=y
 #
 # LGE Specific Patches
 #
-CONFIG_DTS_TARGET="msm8974-g2-spr"
+CONFIG_DTS_TARGET="msm8974-g2-open_com"
 CONFIG_LGE_USES_SMD_DS_TTY=y
 CONFIG_LGE_BOOTLOADER_LOG=y
 CONFIG_LGE_HANDLE_PANIC=y
@@ -517,6 +517,7 @@ CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
+CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_PM8X60=y
@@ -916,7 +917,7 @@ CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 # CONFIG_NF_CONNTRACK_SNMP is not set
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
-CONFIG_NF_CONNTRACK_SIP=y
+# CONFIG_NF_CONNTRACK_SIP is not set
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 # CONFIG_NF_CT_NETLINK_TIMEOUT is not set
@@ -997,7 +998,7 @@ CONFIG_NETFILTER_XT_MATCH_SOCKET=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
 CONFIG_NETFILTER_XT_MATCH_STRING=y
-CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
+# CONFIG_NETFILTER_XT_MATCH_TCPMSS is not set
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 # CONFIG_IP_SET is not set
@@ -1247,13 +1248,13 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
-CONFIG_LGE_NFC=y
+# CONFIG_LGE_NFC is not set
 # CONFIG_LGE_NFC_PN544_C2 is not set
-CONFIG_LGE_NFC_PN544_C3=y
-CONFIG_LGE_NFC_PRESTANDBY=y
-CONFIG_LGE_NFC_MULTICORE_FASTBOOT=y
+# CONFIG_LGE_NFC_PN544_C3 is not set
+# CONFIG_LGE_NFC_PRESTANDBY is not set
+# CONFIG_LGE_NFC_MULTICORE_FASTBOOT is not set
 # CONFIG_LGE_NFC_SET_IRQ_WAKEUP is not set
-CONFIG_LGE_NFC_DEBUG_MESSAGE=y
+# CONFIG_LGE_NFC_DEBUG_MESSAGE is not set
 # CONFIG_LGE_NFC_HW_QCT_MSM72X7A is not set
 # CONFIG_LGE_NFC_HW_QCT_APQ8064 is not set
 # CONFIG_LGE_NFC_HW_QCT_MSM8960 is not set
@@ -1266,7 +1267,7 @@ CONFIG_LGE_NFC_DEBUG_MESSAGE=y
 # CONFIG_LGE_NFC_SONY_CXD2235AGG is not set
 # CONFIG_LGE_NFC_SONY_KDDI is not set
 # CONFIG_CXD2235AGG_GJ_KDDI is not set
-# CONFIG_NFC_BCM2079X is not set
+CONFIG_NFC_BCM2079X=y
 
 #
 # Device Drivers
@@ -1583,8 +1584,7 @@ CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 # CONFIG_DHD_USE_STATIC_BUF is not set
 # CONFIG_DHD_USE_SCHED_SCAN is not set
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-# CONFIG_BCM4335BT is not set
-# CONFIG_BRCM_WAPI is not set
+CONFIG_BCM4335BT=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
@@ -1789,7 +1789,7 @@ CONFIG_DIAG_OVER_USB=y
 #
 # SLATE Support
 #
-CONFIG_LGE_SLATE=y
+# CONFIG_LGE_SLATE is not set
 
 #
 # SDIO support for DIAG
@@ -1994,7 +1994,7 @@ CONFIG_MAX17048_FUELGAUGE=y
 # CONFIG_LGE_PM_BATTERY_ID_CHECKER is not set
 # CONFIG_LGE_CURRENTNOW is not set
 # CONFIG_BQ24192_CHARGER is not set
-# CONFIG_LGE_G2_EMBEDDED_BATT is not set
+CONFIG_LGE_G2_EMBEDDED_BATT=y
 # CONFIG_VZW_LLK is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
@@ -2404,53 +2404,7 @@ CONFIG_VIDEO_IR_I2C=y
 CONFIG_V4L_USB_DRIVERS=y
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-CONFIG_USB_GSPCA=y
-# CONFIG_USB_M5602 is not set
-# CONFIG_USB_STV06XX is not set
-# CONFIG_USB_GL860 is not set
-# CONFIG_USB_GSPCA_BENQ is not set
-# CONFIG_USB_GSPCA_CONEX is not set
-# CONFIG_USB_GSPCA_CPIA1 is not set
-# CONFIG_USB_GSPCA_ETOMS is not set
-# CONFIG_USB_GSPCA_FINEPIX is not set
-# CONFIG_USB_GSPCA_JEILINJ is not set
-# CONFIG_USB_GSPCA_JL2005BCD is not set
-# CONFIG_USB_GSPCA_KINECT is not set
-# CONFIG_USB_GSPCA_KONICA is not set
-# CONFIG_USB_GSPCA_MARS is not set
-# CONFIG_USB_GSPCA_MR97310A is not set
-# CONFIG_USB_GSPCA_NW80X is not set
-# CONFIG_USB_GSPCA_OV519 is not set
-# CONFIG_USB_GSPCA_OV534 is not set
-# CONFIG_USB_GSPCA_OV534_9 is not set
-# CONFIG_USB_GSPCA_PAC207 is not set
-# CONFIG_USB_GSPCA_PAC7302 is not set
-# CONFIG_USB_GSPCA_PAC7311 is not set
-# CONFIG_USB_GSPCA_SE401 is not set
-# CONFIG_USB_GSPCA_SN9C2028 is not set
-# CONFIG_USB_GSPCA_SN9C20X is not set
-# CONFIG_USB_GSPCA_SONIXB is not set
-# CONFIG_USB_GSPCA_SONIXJ is not set
-# CONFIG_USB_GSPCA_SPCA500 is not set
-# CONFIG_USB_GSPCA_SPCA501 is not set
-# CONFIG_USB_GSPCA_SPCA505 is not set
-# CONFIG_USB_GSPCA_SPCA506 is not set
-# CONFIG_USB_GSPCA_SPCA508 is not set
-# CONFIG_USB_GSPCA_SPCA561 is not set
-# CONFIG_USB_GSPCA_SPCA1528 is not set
-# CONFIG_USB_GSPCA_SQ905 is not set
-# CONFIG_USB_GSPCA_SQ905C is not set
-# CONFIG_USB_GSPCA_SQ930X is not set
-# CONFIG_USB_GSPCA_STK014 is not set
-# CONFIG_USB_GSPCA_STV0680 is not set
-# CONFIG_USB_GSPCA_SUNPLUS is not set
-# CONFIG_USB_GSPCA_T613 is not set
-# CONFIG_USB_GSPCA_TOPRO is not set
-# CONFIG_USB_GSPCA_TV8532 is not set
-# CONFIG_USB_GSPCA_VC032X is not set
-# CONFIG_USB_GSPCA_VICAM is not set
-# CONFIG_USB_GSPCA_XIRLINK_CIT is not set
-# CONFIG_USB_GSPCA_ZC3XX is not set
+# CONFIG_USB_GSPCA is not set
 # CONFIG_VIDEO_PVRUSB2 is not set
 # CONFIG_VIDEO_HDPVR is not set
 # CONFIG_VIDEO_EM28XX is not set
@@ -2716,8 +2670,8 @@ CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
 CONFIG_SND_SOC_APQ8074=y
 CONFIG_SND_FM_RADIO=y
-CONFIG_SND_VOICE_VOLUME=9
-CONFIG_SND_VOIP_VOLUME=9
+CONFIG_SND_VOICE_VOLUME=6
+CONFIG_SND_VOIP_VOLUME=6
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9320=y
@@ -2829,7 +2783,7 @@ CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_DEBUG is not set
 CONFIG_USB_LGE_USB3_REDRIVER=y
 # CONFIG_USB_LGE_RELIABILITY is not set
-# CONFIG_USB_LGE_LPM_STATE is not set
+CONFIG_USB_LGE_LPM_STATE=y
 # CONFIG_USB_DWC3_MSM_VZW_SUPPORT is not set
 # CONFIG_USB_MON is not set
 # CONFIG_USB_WUSB_CBAF is not set
@@ -2974,15 +2928,15 @@ CONFIG_RMNET_SMD_CTL_CHANNEL=""
 CONFIG_RMNET_SMD_DATA_CHANNEL=""
 CONFIG_USB_G_LGE_ANDROID=y
 CONFIG_USB_G_LGE_ANDROID_PFSC=y
-CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="LS980"
+CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="Android Platform"
 CONFIG_USB_G_LGE_ANDROID_AUTORUN=y
 # CONFIG_USB_G_LGE_ANDROID_AUTORUN_VZW is not set
 CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
 # CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
 CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
 CONFIG_USB_G_LGE_ANDROID_NCM=y
-# CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT is not set
-CONFIG_USB_G_LGE_SERIALNO_REDIRECTION=y
+CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
+# CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
 CONFIG_USB_LGE_REPOSITION_FACTORY_BIND=y
 
 #
