--- a/arch/arm/configs/slim_vs980_defconfig
+++ b/arch/arm/configs/slim_vs980_defconfig
@@ -694,7 +694,7 @@ CONFIG_MIGRATION=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CLEANCACHE=y
 CONFIG_MEMORY_HOLE_CARVEOUT=y
@@ -707,7 +707,9 @@ CONFIG_ENABLE_VMALLOC_SAVING=y
 # CONFIG_NO_VM_RECLAIM is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
-# CONFIG_UACCESS_WITH_MEMCPY is not set
+CONFIG_UACCESS_WITH_MEMCPY=y
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 # CONFIG_SECCOMP is not set
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
