Export all headers needed for ls980 nfc
Change-Id: I9375d47797124aeb0fe0d1ec51afc91bcc74fa0c

--- a/arch/arm/include/asm/Kbuild
+++ b/arch/arm/include/asm/Kbuild
@@ -1,6 +1,7 @@
 include include/asm-generic/Kbuild.asm
 
 header-y += hwcap.h
+header-y += barrier.h
 
 generic-y += auxvec.h
 generic-y += bitsperlong.h
