--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -6,6 +6,7 @@ header-y += hdlc/
 header-y += hsi/
 header-y += isdn/
 header-y += mmc/
+header-y += nfc/
 header-y += nfsd/
 header-y += raid/
 header-y += spi/
@@ -453,3 +454,20 @@ header-y += ci-bridge-spi.h
 header-y += msm_audio_amrwbplus.h
 header-y += avtimer.h
 header-y += msm_ipa.h
+header-y += slab.h
+header-y += gfp.h
+header-y += mmzone.h
+header-y += linkage.h
+header-y += topology.h
+header-y += mmdebug.h
+header-y += spinlock.h
+header-y += spinlock_types.h
+header-y += spinlock_api_smp.h
+header-y += typecheck.h
+header-y += preempt.h
+header-y += compiler.h
+header-y += irqflags.h
+header-y += thread_info.h
+header-y += stringify.h
+header-y += bottom_half.h
+header-y += atomic.h
